--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrp freelancer</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="css/style.css">
+    <title>Bootstrp freelancer</title>
 </head>
 <body>
     <header>
         <div class="container .d-flex">
-            <div class="w-75 mx-auto row align-items-center">   
+            <div class="w-75 mx-auto row align-items-center ">   
                 <div class="col-8">
-                    <h2>titolo</h2>
+                    <h2>Start Bootstrap</h2>
                 </div>
                 <div class="col-4 text-end">menu</div>
             </div>
@@ -23,7 +25,7 @@
     <main>
         <section id="start">
             <div class="container py-4 text-center">
-                <div><img class="col-3" src="img/avatar.svg" alt=""></div>
+                <div><img class="col-4" src="img/avatar.svg" alt=""></div>
                 <div>
                     <h1>start</h1>
                 </div>
@@ -38,13 +40,26 @@
                     <div>stella</div>
                 </div>
                 <div class="container row flex-column flex-md-row justify-content-center">
-                    <div class="debug_img text-center mt-3 mb-4 rounded-3 col col-md-5 col-lg-3 mx-md-2">IMG</div>
-                    <div class="debug_img text-center mt-3 mb-4 rounded-3 col col-md-5 col-lg-3 mx-md-2">IMG</div>
-                    <div class="debug_img text-center mt-3 mb-4 rounded-3 col col-md-5 col-lg-3 mx-md-2">IMG</div>
-                    <div class="debug_img text-center mt-3 mb-4 rounded-3 col col-md-5 col-lg-3 mx-md-2">IMG</div>
-                    <div class="debug_img text-center mt-3 mb-4 rounded-3 col col-md-5 col-lg-3 mx-md-2">IMG</div>
-                    <div class="debug_img text-center mt-3 mb-4 rounded-3 col col-md-5 col-lg-3 mx-md-2">IMG</div>
-                </div>
+                    <div class="row flex-column flex-md-row justify-content-center">
+                        <div class="text-center mt-3 mb-4 rounded-3 col col-md-5 col-lg-3 mx-md-2">
+                            <img class="img-fluid" src="img/cabin.png" alt="#">
+                        </div>
+                        <div class="text-center mt-3 mb-4 rounded-3 col col-md-5 col-lg-3 mx-md-2">
+                            <img class="img-fluid" src="img/cake.png" alt="#">
+                        </div>
+                        <div class="text-center mt-3 mb-4 rounded-3 col col-md-5 col-lg-3 mx-md-2">
+                            <img class="img-fluid" src="img/circus.png" alt="#">
+                        </div>
+                        <div class="text-center mt-3 mb-4 rounded-3 col col-md-5 col-lg-3 mx-md-2">
+                            <img class="img-fluid" src="img/game.png" alt="#">
+                        </div>
+                        <div class="text-center mt-3 mb-4 rounded-3 col col-md-5 col-lg-3 mx-md-2">
+                            <img class="img-fluid" src="img/safe.png" alt="#">
+                        </div>
+                        <div class="text-center mt-3 mb-4 rounded-3 col col-md-5 col-lg-3 mx-md-2">
+                            <img class="img-fluid" src="img/submarine.png" alt="#">
+                        </div>
+                   </div>
             </div>
         </section>
         <section id="about">
