--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- bootstrap -->
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- font-awesome -->
     <link rel="stylesheet" href="css/style.css">
     <title>Bootstrp freelancer</title>
 </head>
@@ -26,20 +29,30 @@
         <section id="start">
             <div class="container py-4 text-center">
                 <div><img class="col-4" src="img/avatar.svg" alt=""></div>
-                <div>
-                    <h1>start</h1>
+                <div id="star">
+                    <i class="fa-solid fa-star py-4"></i>
                 </div>
-                <div>stella</div>
-                <div>skills</div>
+                <div class="container">
+                    <ul class="d-flex justify-content-center">
+                        <li class="p-1">GRAPHIC DESIGN</li>
+                        <span class="p-1">-</span>
+                        <li class="p-1">WEB DISIGNER</li>
+                        <span class="p-1">-</span>
+                        <li class="p-1">ILLUSTRATOR</li>
+                    </ul>
+
+                </div>
             </div>
         </section>
         <section id="portfoglio">
             <div class="container py-4 text-center">
                 <div>
                     <h3>portfoglio</h3>
-                    <div>stella</div>
+                    <div id="star">
+                        <i class="fa-solid fa-star py-4"></i>
+                    </div>
                 </div>
-                <div class="container row flex-column flex-md-row justify-content-center">
+                <div class="container ">
                     <div class="row flex-column flex-md-row justify-content-center">
                         <div class="text-center mt-3 mb-4 rounded-3 col col-md-5 col-lg-3 mx-md-2">
                             <img class="img-fluid" src="img/cabin.png" alt="#">
@@ -59,13 +72,16 @@
                         <div class="text-center mt-3 mb-4 rounded-3 col col-md-5 col-lg-3 mx-md-2">
                             <img class="img-fluid" src="img/submarine.png" alt="#">
                         </div>
-                   </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="about">
             <div class="container py-4 text-center">
                 <h3>about</h3>
-                <div>stella</div>
+                <div id="star">
+                    <i class="fa-solid fa-star py-4"></i>
+                </div>
             </div>
                 <div class="w-75 mx-auto row flex-md-row flex-column justify-content-center">
                     <p class="col col-md-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae exercitationem esse
@@ -81,7 +97,9 @@
             <div class="container">
                 <div class="text-center">
                     <h3>about</h3>
-                    <div>stella</div>
+                    <div id="star">
+                        <i class="fa-solid fa-star py-4"></i>
+                    </div>
                 </div>
                 <div class="w-75 mx-auto">
                     <ul class="list-unstyled text-left px-5">
